k8s/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: quote-frontend-service
  namespace: quote
spec:
  selector:
    app: quote-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
