k8s/frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: quote-frontend-ingress
  namespace: quote
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls.certresolver: le
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - quote.tomemming.nl
  rules:
    - host: quote.tomemming.nl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: quote-frontend-service
                port:
                  number: 80
